@@ -412,6 +412,7 @@ na_boxed_new_from_string_with_sep( guint type, const gchar *string, const gchar 
 	static const gchar *thisfn = "na_boxed_new_from_string_with_sep";
 	const BoxedDef *def;
 	NABoxed *boxed;
+	gchar *sdup;
 	gchar **array;
 
 	boxed = NULL;
@@ -422,9 +423,15 @@ na_boxed_new_from_string_with_sep( guint type, const gchar *string, const gchar 
 			boxed = boxed_new();
 			boxed->type = type;
 			if( string && strlen( string )){
-				array = string ? g_strsplit( string, sep, -1 ) : NULL;
+				sdup = g_strdup( string );
+				if( g_str_has_suffix( string, sep )){
+					sdup[strlen(sdup)-1-strlen(sep)] = '\0';
+					sdup = g_strstrip( sdup );
+				}
+				array = g_strsplit( sdup, sep, -1 );
 				( *def->from_array )( boxed, ( const gchar ** ) array );
 				g_strfreev( array );
+				g_free( sdup );
 			}
 		} else {
 			g_warning( "%s: unable to initialize the content: '%s' type does not provide 'from_array' function",
@@ -727,25 +734,19 @@ string_list_from_string( NABoxed *boxed, const gchar *string )
 	boxed->is_set = TRUE;
 }
 
-/* do not allocate an empty string for the last element
- */
 static void
 string_list_from_array( NABoxed *boxed, const gchar **array )
 {
-	gchar **i, **next;
+	gchar **i;
 
 	if( boxed->is_set ){
 		string_list_free( boxed );
 	}
 	if( array ){
 		i = ( gchar ** ) array;
-		next = i+1;
 		while( *i ){
-			if( *next ){
-				boxed->u.string_list = g_slist_prepend( boxed->u.string_list, g_strdup( *i ));
-			}
+			boxed->u.string_list = g_slist_prepend( boxed->u.string_list, g_strdup( *i ));
 			i++;
-			next++;
 		}
 		boxed->u.string_list = g_slist_reverse( boxed->u.string_list );
 	} else {
@@ -915,25 +916,19 @@ uint_list_from_string( NABoxed *boxed, const gchar *string )
 	boxed->is_set = TRUE;
 }
 
-/* do not allocate an null integer for the last element
- */
 static void
 uint_list_from_array( NABoxed *boxed, const gchar **array )
 {
-	gchar **i, **next;
+	gchar **i;
 
 	if( boxed->is_set ){
 		uint_list_free( boxed );
 	}
 	if( array ){
 		i = ( gchar ** ) array;
-		next = i+1;
 		while( *i ){
-			if( *next ){
-				boxed->u.uint_list = g_list_prepend( boxed->u.uint_list, GINT_TO_POINTER( atoi( *i )));
-			}
+			boxed->u.uint_list = g_list_prepend( boxed->u.uint_list, GINT_TO_POINTER( atoi( *i )));
 			i++;
-			next++;
 		}
 		boxed->u.uint_list = g_list_reverse( boxed->u.uint_list );
 	} else {
